tests/type_errors/calling_non_function.sy
def main
: Int
: a = f ' 1

def f
: Int
: = 1

--+ expected exit status: 7
--+ expected stderr:
--+ > Failed to merge types.
--+ 
--+ <#33 _> -> _
--+ ----
--+ Int 
--+ 
--+   1| def main
--+   2| : Int
--+   3| : a = f ' 1
--+   4| 
--+   5| def f

